Actually get these schemas

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 /mmrando_pink/
 /ootrando_overworldmap_hamsda/
 
+# no schemas
 /schema/*
+# But do keep layouts, manifest, repository schema
 !/schema/layouts.json
+!/schema/manifest.json
+!/schema/repository.json
