--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Analyze used GitHub Actions
         shell: bash
         run: |
-          py ./resources/ci/common/list_actions.py
+          python ./resources/ci/common/list_actions.py
       # test
       - name: ⏱️Call Test
         uses: ./.github/actions/test
